<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageConstraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imgBlurredBackground"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/blurred_image_behind_profile_photo" />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/CustomActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipChildren="true"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:elevation="12dp"
            android:id="@+id/view2"
            app:cardCornerRadius="100dp"
            android:background="@drawable/border_profile_image"
            android:layout_centerHorizontal="true"
            android:visibility="invisible">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_photo"
                android:background="@android:color/transparent" />
        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/txtInitial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="100sp"
        android:visibility="gone"
        android:textAppearance="@style/Theme.QueShare.DefaultTitleText"
        />
    <ImageView
        android:id="@+id/imgStarred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/btn_star"
        android:padding="10dp"
        android:background="@drawable/bg_background_black_fade_rounded_right"
        android:contentDescription="@string/favourite_button" />
    <ImageView
        android:id="@+id/imgEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/btn_edit"
        android:contentDescription="@string/edit_button" />
    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toStartOf="@id/imgEdit"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_delete"
        android:contentDescription="@string/delete_button" />
    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:srcCompat="@drawable/btn_done"
        android:contentDescription="@string/done_button" />
    <ImageView
        android:id="@+id/imgClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toStartOf="@id/imgDone"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        app:srcCompat="@drawable/btn_clear" />
    <ImageView
        android:id="@+id/imgNavBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/btn_ic_back_arrow"
        android:contentDescription="@string/navigation_back" />

    <ImageView
        android:background="@drawable/bg_background_black_fade_rounded"
        android:id="@+id/imgAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="5dp"
        app:srcCompat="@drawable/btn_photo"
        android:contentDescription="@string/load_photo_button" />
</androidx.constraintlayout.widget.ConstraintLayout>