<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:padding="15dp"
    android:background="@drawable/bg_contact_row"
    android:layout_gravity="start"
    android:gravity="center_vertical"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imgSocialMediaIco"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_circle_sml"
        app:srcCompat="@android:drawable/ic_dialog_info"
        android:contentDescription="@string/social_media_icon" />

    <TextView
        android:id="@+id/handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/placeholder"
        android:textSize="22sp"
        android:textColor="@color/off_white"
        android:textAppearance="@style/Theme.QueShare.DefaultText" />
    <LinearLayout
        android:id="@+id/layoutActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_dialog_info" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_dialog_info" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_dialog_info" />
    </LinearLayout>
    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:contentDescription="@string/delete_button" />
</LinearLayout>